@@ -1,4 +1,4 @@
-.TH SG_COPY_RESULTS "8" "June 2012" "sg3_utils\-1.37" SG3_UTILS
+.TH SG_COPY_RESULTS "8" "December 2013" "sg3_utils\-1.38" SG3_UTILS
 .SH NAME
 sg_copy_results \- send SCSI RECEIVE COPY RESULTS command (XCOPY related)
 .SH SYNOPSIS
@@ -25,20 +25,20 @@ changed. This utility uses the older, SPC\-3 XCOPY names.
 The command has four distinct modes of operation, distinguished by
 the service action field:
 .TP
-\fBCOPY STATUS\fR
+\fBCOPY STATUS  [SPC\-4: RECEIVE COPY STATUS(LID1)]\fR
 Displays the current status of the EXTENDED COPY command identified by
 the list id field.
 .TP
-\fBRECEIVE DATA\fR
+\fBRECEIVE DATA  [SPC\-4: RECEIVE COPY DATA(LID1)]\fR
 Return the held data read by the EXTENDED COPY command identified by
 the list id field. This option is only meaningful if the respective
 segment descriptor are supported.
 .TP
-\fBOPERATING PARAMETERS\fR
+\fBOPERATING PARAMETERS  [SPC\-4: RECEIVE COPY OPERATING PARAMETERS]\fR
 Return copy manager operating parameters. This option is also useful
 to determine if the SCSI Extended Copy facility is supported.
 .TP
-\fBFAILED SEGMENT DETAILS\fR
+\fBFAILED SEGMENT DETAILS  [SPC\-4: RECEIVE COPY FAILURE DETAILS(LID1)]\fR
 Return copy target device sense data and other information about any
 failed segments.
 
