@@ -2,7 +2,7 @@ sg3-utils (1.38-0.1) unstable; urgency=low
 
   * New upstream version
 
- -- Douglas Gilbert <dgilbert@interlog.com>  Sun, 01 Dec 2013 05:00:00 +0100
+ -- Douglas Gilbert <dgilbert@interlog.com>  Wed, 11 Dec 2013 01:00:00 +0100
 
 sg3-utils (1.37-0.1) unstable; urgency=low
 
